5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1103.log
== TEST (2019-04-25 11:43:35) 
-- CODE:
x=float(input())
a=float(input())
b=float(input())
if(b>a):
	if(a<=x and x<=b):
		print(x "pertence ao intervalo", a,",", b)
-- ERROR:
File "XXXX", line 6
    print(x "pertence ao intervalo", a,",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:43) 
-- CODE:
x=float(input())
a=float(input())
b=float(input())
if(b>a):
	if(a<=x and x<=b):
		print(x ,"pertence ao intervalo", a,",", b)
-- ERROR:
File "XXXX", line 6
    print(x "pertence ao intervalo", a,",", b)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:45:57) 
-- CODE:
x=float(input())
a=float(input())
b=float(input())
if(b>a):
	if(a<=x and x<=b):
		print(x ,"pertence ao intervalo", a,",", b)
	else:
		print(x ,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a," e", b ,"invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:46:20) 
-- CODE:
x=float(input())
a=float(input())
b=float(input())
if(b>a):
	if(a<=x and x<=b):
		print(x ,"pertence ao intervalo", a,",", b)
	else:
		print(x ,"nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a," e", b ,"invalidas")
-- EXECUTION TIME:
0.286253
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5  e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
